--- a/views/base.ejs
+++ b/views/base.ejs
@@ -6,90 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title><%= title %></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    <header>
-        <!-- header -->
-            <!-- navbar 1 -->
-               <div id="nav1">
-                    <div class="container">
-                        <div id="block1">
-                            <div id="slogan">
-                                <a href="#"> Cultivons un autre monde !</a>
-                             </div>
-                             <div id="menu1">
-                                 <ul>
-                                     <li><a href="#">Infos qualité</a></li>
-                                     <li><a href="#">Infos livraisons</a></li>
-                                     <li><a href="#">Infos paiements</a></li>
-                                     <li>
-                                       <ul>
-                                        <li class="media-social"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li class="media-social"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li class="media-social"><a href="#"><i class="far fa-envelope"></i></a></li>
-                                        <li class="media-social"><a href="#"><i class="fas fa-phone-alt"></i></a></li>
-                                       </ul>
-                                     </li>
-                                 </ul>
-                          
-                             </div>
-                        </div>
-                    </div>
-               </div>
-            <!-- fin navbar 1 -->
-            <!-- navbar 2 -->
-                <div id="nav2">
-                    <div class="container">
-                        <div>
-                            <a href=""><img src="" alt="logo_jaune_congo"></a>
-                        </div>
-                        <div id="menu">
-                            <ul>
-                                <li><a href="#">Légumes</a></li>
-                                <li><a href="#">Fruits</a></li>
-                                <li><a href="#">Herbes aromatiques</a></li>
-                                <li><a href="#">Paniers hebdomadaires</a></li>
-                            </ul>
-                        </div>
-                        <div>
-                            <ul>
-                                <li><a href="#">Connexion</a></li>
-                                <li><a href="#">Panier / $0.00 <i class="fas fa-shopping-basket"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+    <header class="header">
+        <div class="h-navbar-contact-container">
+            <div class="h-navbar-contact content">
+                <div class="h-navbar-contact-slogan">
+                    <h3 id="contact-slogan"><a href="#">Cultivons un autre monde !</a></h3>
                 </div>
-            <!-- fin navbar 2 -->
-        <!-- fin header -->
+                <div class="h-navbar-contact-menu">
+                    <a href="#" class="h-navbar-contact-menu-link">Infos qualité</a>
+                    <a href="#" class="h-navbar-contact-menu-link">Infos livraisons</a>
+                    <a href="#" class="h-navbar-contact-menu-link">Infos paiements</a>
+                    <a href="#" class="h-navbar-contact-menu-link-icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#" class="h-navbar-contact-menu-link-icon"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#" class="h-navbar-contact-menu-link-icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                    <a href="#" class="h-navbar-contact-menu-link-icon"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="h-navbar-infos-container">
+            <div class="h-navbar-info content">
+                
+            </div>
+        </div>
     </header>
-
-    <section>
-    </section>
-
-
-
-    <footer>
-
-    </footer>
-
-
-
-
-
-    <script src="js/all.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
     <script src="js/script.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
