--- a/views/base.ejs
+++ b/views/base.ejs
@@ -32,14 +32,41 @@
 
         <div class="h-navbar-infos-container">
             <div class="h-navbar-info content">
-                
+                <div class="h-navbar-info-logo">
+                    <a href="#" class="h-navbar-info-logo-img"><img src="img/Logo_Jaune_Congo_GilroyFont-01-transparent.jpg" alt="logo_jaune_congo"></a>
+                </div>
+                <div class="h-navbar-info-menu">
+                    <a href="#" class="h-navbar-info-menu-link">Légumes</a>
+                    <a href="#" class="h-navbar-info-menu-link">Fruits</a>
+                    <a href="#" class="h-navbar-info-menu-link">Herbes aromatiques</a>
+                    <a href="#" class="h-navbar-info-menu-link">Paniers hebdomadaires</a>
+                    <a href="#" class="h-navbar-info-menu-link">Plus</a>
+                </div>
+                <div class="h-navbar-info-panier">
+                    <a href="#" class="h-navbar-info-panier-link">Connexion</a>
+                    <a href="#" class="h-navbar-info-panier-link"> Panier /$0.00 <i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
     </header>
+
+
+
+
+    <footer>
+        
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
 
 
 
