--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,13 +9,17 @@ body, h1, h2, h3
     padding: 0;
 }
 
+header
+{
+    font-family: gilroy, sans-serif;
+}
 .h-navbar-contact-container
 {
     background-color: yellow;
 }
 .content
 {
-    width: 70%;
+    width: 80%;
     margin: auto;
 }
 .h-navbar-contact
@@ -37,7 +41,7 @@ body, h1, h2, h3
 .h-navbar-contact-menu-link
 {
     font-size: 15px;
-    font-family: gilroy, sans-serif;
+
     text-decoration: none;
     color: black;
     margin-left: 15px;
@@ -49,5 +53,35 @@ body, h1, h2, h3
     color: black;
 }
 
+.h-navbar-info
+{
+   height: 70%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+}
+.h-navbar-info-logo
+{
+    height: 80px;
+}
 
+.h-navbar-info img
+{
+    max-width: 100%;
+    max-height: 100%;
+}
+.h-navbar-info-menu-link
+{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
+
+.h-navbar-info-panier-link
+{
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
 
