--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,55 @@
 <% layout("./base") -%>
 
 
+
+<article class="a-banner">
+  <div class="a-banner-content">
+    <div class="content">
+      <div class="a-banner-slogan">
+        <div class="a-banner-slogan-img">
+          <img src="img\Logo_legumes_blanc-1400x734.jpg" alt="jaune-congo-image-slogan">
+        </div>
+        <div class="a-baner-slogan-texte">
+          <h2><strong><em>Chez nous, vous êtes « satisfait ou remboursé »!</em></strong></h2>
+        </div>
+      </div>
+      <div class="a-banner-about-produits">
+        <div class="row">
+          <div class="col-lg-3 a-banner-about-produit-sain-block">
+            <div class="a-banner-about-produit-sain">
+
+            </div>
+          </div>
+          <div class="col-lg-5 a-banner-about-produit-produit-semaine-block">
+            <div class="a-banner-about-produit-produit-semaine">
+
+            </div>
+          </div>
+          <div class="col-lg-3 a-banner-about-produit-frais-block">
+            <div class="a-banner-about-produit-frais">
+            </div>
+          </div>
+
+
+
+
+          <div class="col-lg-3 a-banner-about-produit-sain-block">
+            <div class="a-banner-about-produit-sain">
+
+            </div>
+          </div>
+          <div class="col-lg-5 a-banner-about-produit-produit-semaine-block">
+            <div class="a-banner-about-produit-produit-semaine">
+
+            </div>
+          </div>
+          <div class="col-lg-3 a-banner-about-produit-frais-block">
+            <div class="a-banner-about-produit-frais">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</article>
