--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,87 +1,204 @@
 @font-face {
-    font-family: gilroy;
-    src: url(../fonts/gilroy/Gilroy-Light.otf);
-  }
-
-body, h1, h2, h3
-{
-    margin: 0;
-    padding: 0;
+  font-family: gilroy;
+  src: url(../fonts/gilroy/Gilroy-Light.otf);
+}
+@font-face {
+  font-family: gilroy-bold;
+  src: url(fonts/gilroy/Gilroy-ExtraBold.otf);
 }
 
-header
-{
-    font-family: gilroy, sans-serif;
+body,
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
 }
-.h-navbar-contact-container
-{
-    background-color: yellow;
+header {
+  font-family: gilroy, sans-serif;
 }
-.content
-{
-    width: 80%;
-    margin: auto;
+.h-navbar-contact-container {
+  background-color: yellow;
 }
-.h-navbar-contact
-{
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.content {
+  width: 80%;
+  margin: auto;
+  position: relative;
 }
-#contact-slogan a
-{
-    font-size: 15px;
-    font-family: gilroy, sans-serif;
-    color: black;
-    font-weight: normal;
-    text-decoration: none;
+.h-navbar-contact {
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.h-navbar-contact-menu-link
-{
-    font-size: 15px;
+#contact-slogan a {
+  font-size: 15px;
+  font-family: gilroy, sans-serif;
+  color: black;
+  font-weight: normal;
+  text-decoration: none;
+}
+.h-navbar-contact-menu-link {
+  font-size: 15px;
 
-    text-decoration: none;
-    color: black;
-    margin-left: 15px;
-    padding: 12px;
+  text-decoration: none;
+  color: black;
+  margin-left: 15px;
+  padding: 12px;
 }
-.h-navbar-contact-menu-link-icon
-{
-    margin-left: 5px;
-    color: black;
-}
-
-.h-navbar-info
-{
-   height: 70%;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   align-items: center;
-}
-.h-navbar-info-logo
-{
-    height: 80px;
+.h-navbar-contact-menu-link-icon {
+  margin-left: 5px;
+  color: black;
 }
 
-.h-navbar-info img
-{
-    max-width: 100%;
-    max-height: 100%;
+.h-navbar-info {
+  height: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.h-navbar-info-menu-link
-{
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-}
-
-.h-navbar-info-panier-link
-{
-    text-decoration: none;
-    color: black;
-    padding: 5px;
+.h-navbar-info-logo {
+  height: 80px;
 }
 
+.h-navbar-info img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.h-navbar-info-menu-link {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+}
+
+.h-navbar-info-panier-link {
+  text-decoration: none;
+  color: black;
+  padding: 5px;
+}
+footer {
+  font-family: gilroy, sans-serif;
+}
+footer hr {
+  background-color: #f1f1f146;
+  border: none;
+  height: 1px;
+}
+.f-menu-container {
+  background-color: #1f232c;
+}
+.f-copi-container {
+  background-color: rgb(31, 35, 44, 0.96);
+}
+.f-menu-infos {
+  color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+footer ul {
+  padding: 0%;
+  margin: 0%;
+}
+
+.f-menu ul li {
+  list-style: none;
+  margin-top: 20px;
+}
+.f-menu ul li a {
+  color: white;
+  text-decoration: none;
+}
+.f-menu-title {
+  font-size: 16px;
+  color: #f1f1f1;
+  font-weight: bold;
+}
+.f-menu-items {
+  /* padding: 6px 6px 6px 0; */
+  font-size: 16px;
+  color: #f1f1f1;
+}
+.souligne {
+  height: 3px;
+  width: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background: rgb(255, 255, 255, 0.3);
+}
+
+.f-copi-container {
+  padding: 10px 0 15;
+  color: rgb(255, 255, 255, 0.5);
+}
+
+.f-copi-container span a {
+  color: rgb(255, 255, 255, 0.5);
+  text-decoration: none;
+}
+
+/* header et footer */
+
+.a-banner {
+  background: url(../img/background.jpg) center no-repeat;
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+  color: white;
+}
+.a-banner-content {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(2, 2, 2, 0.6);
+}
+.a-banner-slogan-img {
+  display: flex;
+  justify-content: center;
+  height: 120px;
+}
+.a-banner-slogan-img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.a-baner-slogan-texte h2 {
+  text-align: center;
+  font-size: 20px;
+  color: #f1f1f1;
+  padding: 16px;
+}
+.a-baner-slogan-texte h2 strong {
+  font-weight: normal;
+}
+.a-banner-about-produit-sain-block {
+  height: 250px;
+  background: url(../img/sain.jpg) center no-repeat;
+  background-size: cover;
+  border-bottom: yellow solid 7px;
+  margin: 15px;
+}
+.a-banner-about-produit-frais-block {
+  height: 250px;
+  background: url(../img/tomates.jpg) center no-repeat;
+  background-size: cover;
+  border-bottom: yellow solid 7px;
+  margin: 15px;
+}
+.a-banner-about-produit-produit-semaine-block {
+  height: 250px;
+  background: url(../img/Patate20douce9_500x500.jpg) center no-repeat;
+  background-size: cover;
+  margin: 15px;
+  position: relative;
+}
+.a-banner-about-produit-produit-semaine {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(31, 31, 31, 0.8);
+}
